fix the content not showing

--- a/src/pages/pages.css
+++ b/src/pages/pages.css
@@ -36,6 +36,7 @@
         margin-left: 0px;
         padding: 16px;
         height: auto;
+        padding-bottom: 100px;
     }
 
     .content.collapsed {
